#40 Feat: 티켓북 기간별 조회api 생성