@@ -3,6 +3,7 @@ package encore.server.domain.ticket.service;
 import encore.server.domain.image.service.ImageService;
 import encore.server.domain.musical.entity.Musical;
 import encore.server.domain.musical.repository.MusicalRepository;
+import encore.server.domain.ticket.converter.TicketConverter;
 import encore.server.domain.ticket.dto.request.ActorDTO;
 import encore.server.domain.ticket.dto.request.TicketCreateReq;
 import encore.server.domain.ticket.dto.response.TicketCreateRes;
@@ -17,6 +18,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -33,24 +35,17 @@ public class TicketService {
 
     @Transactional
     public TicketCreateRes createTicket(TicketCreateReq request) {
-
-        //validation
+        // Validation
         Musical musical = musicalRepository.findById(request.musicalId())
                 .orElseThrow(() -> new RuntimeException("Musical not found"));
 
         User user = userRepository.findById(request.userId())
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        //actordto->actor
-        List<Actor> actors = request.actors().stream()
-                .map(actorDTO -> Actor.builder()
-                        .id(actorDTO.id())
-                        .name(actorDTO.name())
-                        .actorImageUrl(actorDTO.actorImageUrl())
-                        .build())
-                .collect(Collectors.toList());
+        // DTO -> Entity 변환
+        List<Actor> actors = TicketConverter.toActorList(request.actors());
 
-        //create ticket
+        // Ticket 생성
         Ticket ticket = Ticket.builder()
                 .user(user)
                 .musical(musical)
@@ -61,18 +56,36 @@ public class TicketService {
                 .ticketImageUrl(request.ticketImageUrl())
                 .build();
 
+        // 저장
         ticketRepository.save(ticket);
 
-
-        return new TicketCreateRes(ticket);
-
+        // Entity -> DTO 변환
+        return TicketConverter.toCreateResponse(ticket);
     }
 
     public List<ActorDTO> searchActorsByName(String keyword) {
         List<Actor> actors = actorRepository.findByNameContaining(keyword);
         return actors.stream()
                 .map(actor -> new ActorDTO(actor.getId(), actor.getName(), actor.getActorImageUrl()))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<TicketRes> getTicketList(String dateRange) {
+        LocalDate startDate = switch (dateRange) {
+            case "WEEK" -> LocalDate.now().minusWeeks(1);
+            case "MONTH" -> LocalDate.now().minusMonths(1);
+            case "YEAR" -> LocalDate.now().minusYears(1);
+            default -> null; // ALL: 전체 조회
+        };
+
+        List<Ticket> tickets = (startDate != null) ?
+                ticketRepository.findByViewedDateAfter(startDate) :
+                ticketRepository.findAll();
+
+        // Entity -> DTO 변환
+        return tickets.stream()
+                .map(TicketConverter::toResponse)
+                .toList();
     }
 
 }
